[package]
name = "vaba-rust"
version = "0.1.0"
edition = "2021"
description = ""

[dependencies]
actix-web = "4"
anyhow = { version = "1.0.65" }
tokio = { version = "1.35.0", features = ["full"] }
rand = "0.7.3"
threshold_crypto = "0.4.0"
log = "0.4"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
serde_derive = "1.0.219"
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1

[[bin]]
name = "vaba-server"
path = "src/main.rs"
doctest = false
test = true
